--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.23.0",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
     "postcss": "^8.5.3",
     "postcss-preset-env": "^10.1.5",
     "prettier": "^3.5.3",
@@ -20,5 +23,9 @@
   },
   "dependencies": {
     "swiper": "^11.2.2"
-  }
+  },
+  "lint-staged": {
+  "*.js": "eslint --fix"
+}
+
 }
